--- a/style.css
+++ b/style.css
@@ -186,6 +186,30 @@ header{
   margin-left: .9em;
 }
 
+.section-image-wrapper{
+  display: flex;
+}
+
+.section-footer{
+  background-color: limegreen;
+  height: 300px;
+  /*display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+}
+.section-footer-title{
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: .7em;
+  color: #000;
+}
+.section-image-wrapper{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 2em;
+}
 
 /* Responsiveness for main section layout */
 @media(max-width: 768px){
@@ -218,7 +242,6 @@ header{
     padding: 1em 0;
     font-size: 20px;
     width: 90%;
-    /* text-align: center; */
     margin: 0 auto;
   }
   .main-btn{
@@ -267,9 +290,36 @@ header{
     font-size: 13.1px;
     color: #000;
   }
+  /* section-footern style */
+  .section-footer{
+    background-color: limegreen;
+    margin-top: 10em;
+  }
+  .section-footer-title{
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+  .section-image-wrapper{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    max-height: 250px;
+    color: orange;
+  }
+  .designU, .polaris, .Nerdz{
+    width: 70px;
+  }
+  .polaris{
+    width: 40px;
+  }
 }
 /* Tablet screen size */
 @media(max-width: 820px) {
+  /* section-footern style */
+  .section-image-wrapper{
+    display: flex;
+  }
   .main-container, .page-wrapper,.page-three-container{
     flex-direction: column;
   }
