--- a/style.css
+++ b/style.css
@@ -61,8 +61,6 @@ header{
     left: 0;
   }
 }
-
-
 /* nav-wrapper style*/
 .nav-wrapper {
   display: flex;
@@ -193,10 +191,6 @@ header{
 .section-footer{
   background-color: #4493479C;
   height: 300px;
-  /*display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
 .section-footer-title{
   text-align: center;
@@ -237,6 +231,9 @@ h3{
 .fbook-icon{
   margin: .8em;
 }
+.icon:hover {
+  transform: scale(1.3);
+}
 .footer-list{
   margin: .5em;
 }
@@ -257,14 +254,18 @@ h3{
   align-items: center;
   justify-content: center;
 }
+@media only screen and (max-width: 400px){
+  .page-content{
+    color: #fff;
+  }
+}
 /* Responsiveness for main section layout */
 @media only screen and (max-width: 768px){
-  /* footer */
-  .footer-logo{
-    visibility: hidden;
-  }
-
   /* last-footer */
+  .logo{
+    width: 120px;
+    }
+    /* last-footer */
 .last-section{
   height: 500px;
   display: flex;
