--- a/contact.css
+++ b/contact.css
@@ -79,7 +79,7 @@ input{
     margin-right: 1.2em;
   }
   .nav-container{
-   display: none;
+   display: block;
   }
   .hamburger.active .bar:nth-child(2){
     opacity: 0;
@@ -88,15 +88,19 @@ input{
     transform: translateY(8px) rotate(45deg);
   }
   .hamburger.active .bar:nth-child(3){
-    transform: translateY(-8px) rotate-(45deg);
+    transform: translateY(-8px) rotate(-45deg);
   }
   .nav-container {
-    position: fixed;
-    left: -100px;
+    position: absolute;
+    left: -100%;
     top: 70px;
     gap: 0;
+    display: flex;
     flex-direction: column;
-    background-color: #000;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    width: 100%;
     text-align: center;
     transition: 0.3s;
   }
@@ -270,5 +274,90 @@ h3{
   text-decoration: underline;
   font-weight: bold;
 }
+}
 
+/* screensize 768px */
+@media only screen and (max-width: 768px){
+  .form-wrapper{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .form-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+  .last-section {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+/* screensize 820px */
+@media only screen and (max-width: 820px){
+  .form-wrapper{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .form-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+  .last-section {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+/* screensize 834px */
+@media only screen and (max-width: 838px){
+  .form-wrapper{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .form-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+  .last-section {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+/* tablet screensize 884px */
+@media only screen and (max-width: 884px){
+  .form-wrapper{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .form-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+}
+/* tablet screensize 1114px */
+@media only screen and (max-width: 1118px){
+  .form-wrapper{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .form-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
 }
