--- a/login.css
+++ b/login.css
@@ -182,3 +182,61 @@ p:hover{
     text-decoration: underline;
   }
 }
+
+/* ipad Air 4 screen size 820px  */
+@media only screen and (max-width: 820px){
+  /* form-layout style */
+  .form-wrapper{
+    background: #244000;
+    height: auto;
+    width: 80%;
+    margin-bottom: 10px;
+  }
+  label{
+    font-size: 16px;
+  }
+  sup{
+    color: #fff;
+    margin-left: .1em;
+  }
+  p, a{
+    margin-top: 10px;
+    text-decoration: none;
+    color: #fff;
+  }
+  p {
+    text-align: center;
+  }
+  p:hover{
+    text-decoration: underline;
+  }
+}
+
+/* ipad Air PRO 11 screen size 820px  */
+@media only screen and (max-width: 838px){
+  /* form-layout style */
+  .form-wrapper{
+    background: #244000;
+    height: auto;
+    width: 80%;
+    margin-bottom: 10px;
+  }
+  label{
+    font-size: 16px;
+  }
+  sup{
+    color: #fff;
+    margin-left: .1em;
+  }
+  p, a{
+    margin-top: 10px;
+    text-decoration: none;
+    color: #fff;
+  }
+  p {
+    text-align: center;
+  }
+  p:hover{
+    text-decoration: underline;
+  }
+}
