--- a/product.css
+++ b/product.css
@@ -32,7 +32,7 @@ header{
     margin-right: 1.2em;
   }
   .nav-container{
-   display: none;
+   display: block;
   }
   
   .hamburger.active .bar:nth-child(2){
@@ -42,15 +42,19 @@ header{
     transform: translateY(8px) rotate(45deg);
   }
   .hamburger.active .bar:nth-child(3){
-    transform: translateY(-8px) rotate-(45deg);
+    transform: translateY(-8px) rotate(-45deg);
   }
   .nav-container {
-    position: fixed;
-    left: -100px;
+    position: absolute;
+    left: -100%;
     top: 70px;
     gap: 0;
+    display: flex;
     flex-direction: column;
-    background-color: #000;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    width: 100%;
     text-align: center;
     transition: 0.3s;
   }
