--- a/register.css
+++ b/register.css
@@ -131,8 +131,43 @@ label{
   font-size: 14px;
 }
 }
-/* screen size 768  */
+/* ipadMini screen size 768px  */
 @media only screen and (max-width: 768px){
+  /* form-layout style */
+  .form-wrapper{
+    background: #244000;
+    height: auto;
+    width: 80%;
+    margin-bottom: 10px;
+  }
+  label{
+    font-size: 16px;
+  }
+  sup{
+    color: #fff;
+    margin-left: .1em;
+  }
+}
+
+/* ipad Air 4 */
+@media only screen and (max-width: 820px){
+  /* form-layout style */
+  .form-wrapper{
+    background: #244000;
+    height: auto;
+    width: 80%;
+    margin-bottom: 10px;
+  }
+  label{
+    font-size: 16px;
+  }
+  sup{
+    color: #fff;
+    margin-left: .1em;
+  }
+}
+/* ipad PRO 11 */
+@media only screen and (max-width: 838px){
   /* form-layout style */
   .form-wrapper{
     background: #244000;
